# armoury

./: .gitignore  Cargo.toml  LICENSE  README.md  application.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/config/: general.rs  logger.rs
src/route/: api.rs
src/service/: health.rs
